# actionengine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_pybindings_for_dev.sh  configure.sh  pyproject.toml  setup.py
eglt/: CMakeLists.txt
eglt/eglt/: library.cpp  library.h
eglt/eglt/actions/: CMakeLists.txt  action.cc  action.h
eglt/eglt/concurrency/: CMakeLists.txt  base.h  boost_fiber.h  concurrency.h  implementation.h  not_implemented.h
eglt/eglt/data/: CMakeLists.txt  chunk_factories.cc  conversion.h  eg_structs.cc  eg_structs.h  mimetypes.h  msgpack.h  serialization.h  string_helpers.cc  types_pybind11.cc
eglt/eglt/net/: CMakeLists.txt  byte_stream.cc  byte_stream.h  recoverable_stream.h  stream.h  test_recoverable_stream.cc
eglt/eglt/nodes/: CMakeLists.txt  async_node.cc  async_node.h  chunk_store.cc  chunk_store.h  chunk_store_io.cc  chunk_store_io.h  chunk_store_local.cc  chunk_store_local.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  chunk_store_reader.h  chunk_store_writer.h  node_map.cc  node_map.h  nodes_pybind11.cc  nodes_pybind11.h
eglt/eglt/service/: CMakeLists.txt  service.cc  service.h  service_pybind11.h  session.cc  session.h
eglt/eglt/util/: CMakeLists.txt  map_util.h  random.h  utils_pybind11.cc
examples/000-actions/: CMakeLists.txt  main.cc
examples/001-bidi-actions/: CMakeLists.txt  bidi_actions.cc
examples/005-echo-server/: CMakeLists.txt  main.cc
examples/008-webrtc/: CMakeLists.txt  main.cc  signaling.py
pybind11/eglt/pybind11/: CMakeLists.txt  actions.cc  actions.h  chunk_store.cc  chunk_store.h  evergreen.cc  nodes.cc  nodes.h  pybind11_headers.h  service.cc  service.h  types.cc  types.h  utils.cc  utils.h  websockets.cc  websockets.h
src/: CMakeLists.txt
src/actionengine/: actionengine_pybind11.cc
src/actionengine/actions/: CMakeLists.txt  action.cc  action.h  actions_pybind11.cc  actions_pybind11.h  registry.cc  registry.h  schema.cc  schema.h
src/actionengine/concurrency/: CMakeLists.txt  concurrency.cc  concurrency.h
src/actionengine/data/: CMakeLists.txt  conversion.h  data_pybind11.cc  data_pybind11.h  mimetypes.h  msgpack.cc  msgpack.h  serialization.cc  serialization.h  types.cc  types.h
src/actionengine/distributed/: CMakeLists.txt  consistent_hash.cc  consistent_hash.h  groupcache.cc  groupcache.h  lru.cc  lru.h  peers.cc  peers.h  singleflight.cc  singleflight.h  sinks.cc  sinks.h  test_consistent_hash.cc  test_groupcache.cc  test_lru.cc  test_singleflight.cc
src/actionengine/msgpack/: CMakeLists.txt  array.h  core_helpers.h  float.h  int.h  misc.h  msgpack.cc  msgpack.h  strbin.cc  strbin.h
src/actionengine/net/: CMakeLists.txt  client.cc  recoverable_stream.cc  recoverable_stream.h  stream.h  test_recoverable_stream.cc  test_utils.cc  testing_utils.h
src/actionengine/nodes/: CMakeLists.txt  async_node.cc  async_node.h  node_map.cc  node_map.h  nodes_pybind11.cc  nodes_pybind11.h
src/actionengine/proto/: CMakeLists.txt  converters.cc  converters.h  service.proto  types.proto
src/actionengine/redis/: CMakeLists.txt  chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  pubsub.cc  pubsub.h  redis.cc  redis.h  reply.cc  reply.h  reply_converters.cc  reply_converters.h  reply_parsers.cc  reply_parsers.h  streams.cc  streams.h
src/actionengine/service/: CMakeLists.txt  service.cc  service.h  service_pybind11.cc  service_pybind11.h  session.cc  session.h
src/actionengine/stores/: CMakeLists.txt  byte_chunking.cc  byte_chunking.h  chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  chunk_store_reader.cc  chunk_store_reader.h  chunk_store_writer.cc  chunk_store_writer.h  local_chunk_store.cc  local_chunk_store.h  test_chunk_store.cc
src/actionengine/util/: CMakeLists.txt  boost_asio_utils.cc  boost_asio_utils.h  global_settings.h  map_util.h  platform.h  random.h  source_location.h  status_builder.cc  status_builder.h  status_macros.h  utils_pybind11.cc  utils_pybind11.h
src/cppack/: CMakeLists.txt
src/eglt/: actionengine_pybind11.cc  evergreen_pybind11.cc
src/eglt/actions/: CMakeLists.txt  action.cc  action.h  actions_pybind11.cc  actions_pybind11.h  registry.cc  registry.h  schema.cc  schema.h
src/eglt/concurrency/: CMakeLists.txt  concurrency.cc  concurrency.h
src/eglt/data/: CMakeLists.txt  conversion.h  data_pybind11.cc  data_pybind11.h  eg_structs.cc  eg_structs.h  mimetypes.h  msgpack.cc  msgpack.h  serialization.h  types.cc  types.h  types_pybind11.cc  types_pybind11.h
src/eglt/msgpack/: CMakeLists.txt  array.h  core_helpers.h  float.h  int.h  misc.h  msgpack.cc  msgpack.h  strbin.h
src/eglt/net/: CMakeLists.txt  client.cc  peers.h  recoverable_stream.h  stream.h  test_recoverable_stream.cc  test_utils.cc  testing_utils.h
src/eglt/nodes/: CMakeLists.txt  async_node.cc  async_node.h  chunk_store.h  chunk_store_io.h  chunk_store_local.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  chunk_store_reader.h  chunk_store_writer.h  local_chunk_store.h  node_map.cc  node_map.h  nodes_pybind11.cc  shared_chunk_store.h  test_chunk_store.cc
src/eglt/redis/: CMakeLists.txt  chunk_store.cc  chunk_store.h  chunk_store_pybind11.cc  chunk_store_pybind11.h  playground.cc  pubsub.cc  pubsub.h  redis.cc  redis.h  reply.cc  reply.h  reply_converters.cc  reply_converters.h  reply_parsers.cc  reply_parsers.h  streams.cc  streams.h
src/eglt/sdk/: CMakeLists.txt  boost_asio_utils.cc  boost_asio_utils.h  fiber_aware_websocket_stream.cc  fiber_aware_websocket_stream.h  webrtc.cc  webrtc.h  webrtc_pybind11.cc  webrtc_pybind11.h  websockets.cc  websockets.h  websockets_pybind11.cc
src/eglt/service/: CMakeLists.txt  service.cc  service.h  service_pybind11.cc  service_pybind11.h  session.cc  session.h
src/eglt/stores/: CMakeLists.txt  (+16 more)
src/g3_fiber/: CMakeLists.txt
src/g3fiber/: CMakeLists.txt
src/pybind11_abseil_module/: CMakeLists.txt  pybind11_abseil.cc
src/pybind11_abseil_status_module/: CMakeLists.txt  status.cc
src/thread/: CMakeLists.txt
src/thread_on_boost/: CMakeLists.txt
(+1116 files in other folders)
