[project]
name = "actionengine"
version = "0.1.1"

authors = [
    { name = "Helena Pankov", email = "helenapankov@google.com" },
]
description = "Action Engine"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]

dependencies = [
    "absl-py>=2.2.2",
    "msgpack-python>=0.5.6",
    "numpy>=2,<2.3.0",
    "ormsgpack",
    "Pillow",
    "pydantic",
    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.5",
    "setuptools==78.1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["py"]
include = ["actionengine"]

[tool.setuptools.package-data]
actionengine = ["*.so"]